Views: Use cached size for Omnibox match separator

Missed that the separator was an OmniboxTextView.

Bug: 860789, 712268
Change-Id: I670fa25754f23a5aaaa9201f548d9b735f92ecf3
Reviewed-on: https://chromium-review.googlesource.com/1128187
Reviewed-by: Justin Donnelly <jdonnelly@chromium.org>
Commit-Queue: Leonard Grey <lgrey@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573304}
Former-commit-id: 6aac6ccf30deb69d888247a853b9087610606bd4